# mcp-server-cae-ai

./: LICENSE  README.md  pyproject.toml
.github/workflows/: release.yml
docs/: TESTING.md
src/mcp_server_cae_ai/: __init__.py
src/mcp_server_cae_ai/cubit/: __init__.py  cubit_api_reference.py  cubit_forum_tips.py  cubit_scripting_knowledge.py  export_knowledge.py  netgen_workflow_knowledge.py  rules.py  server.py
src/mcp_server_cae_ai/eqnedt32/: mtef_knowledge.py  server.py
src/mcp_server_cae_ai/gmsh/: __init__.py  gmsh_api_knowledge.py  gmsh_scripting_knowledge.py  gmsh_workflow_knowledge.py  rules.py  server.py
src/mcp_server_cae_ai/ngsolve/: induction_heating_knowledge.py  kelvin_knowledge.py  ngbem_inductance_knowledge.py  ngsolve_knowledge.py  rules.py  server.py  sparsesolv_knowledge.py
src/mcp_server_cae_ai/radia/: __init__.py  gmsh_builder_knowledge.py  kelvin_knowledge.py  md2html_knowledge.py  ngsolve_knowledge.py  radia_knowledge.py  rules.py  server.py  sparsesolv_knowledge.py
tests/: test_cubit_rules.py  test_gmsh_rules.py  test_ngsolve_rules.py  test_radia_rules.py  test_selftest.py
tests/fixtures/: bad_gmsh_script.py  bad_ngsolve_script.py  bad_peec_script.py  bad_radia_script.py  clean_gmsh_script.py  clean_ngsolve_script.py  clean_radia_script.py
