[build-system]
requires = ["setuptools>=77.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mcp-server-cae-ai"
version = "1.1.0"
description = "MCP servers for CAE: Radia magnetostatics + NGSolve FEM + Cubit meshing"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    {name = "Kengo Sugahara", email = "sugahara@kindai.ac.jp"},
]
keywords = [
    "mcp", "model-context-protocol", "claude-code",
    "cae", "simulation", "electromagnetics",
    "radia", "ngsolve", "ngbem", "cubit", "meshing",
    "magnetostatics", "fem", "bem", "peec", "lint",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Software Development :: Quality Assurance",
]

dependencies = [
    "mcp>=1.0.0",
]

[project.scripts]
mcp-server-radia = "mcp_server_cae_ai.radia.server:main"
mcp-server-cubit = "mcp_server_cae_ai.cubit.server:main"

[project.urls]
Homepage = "https://github.com/ksugahar/mcp-server-cae-ai"
Repository = "https://github.com/ksugahar/mcp-server-cae-ai"
"Radia Project" = "https://github.com/ksugahar/Radia"
"Cubit Mesh Export" = "https://github.com/ksugahar/Coreform_Cubit_Mesh_Export"

[tool.setuptools.packages.find]
where = ["src"]
